@@ -31,6 +31,7 @@ This release includes the following bugfixes:
  o range numbers could be made to wrongly get output as signed
  o unexpected 1xx responses hung transfers
  o FTP transfers segfault when using different CURLOPT_FTP_FILEMETHOD
+ o c-ares powered libcurls can resolve/use IPv6 addresses
 
 This release includes the following known bugs:
 
@@ -50,7 +51,7 @@ advice from friends like these:
  Lenny Rachitsky, Axel Tillequin, Arnaud Ebalard, Yang Tse, Dan Fandrich,
  Rob Crittenden, Dengminwen, Christopher Palow, Hans-Jurgen May,
  Phil Pellouchoud, Eduard Bloch, John Lightsey, Stephen Collyer, Tor Arntsen,
- Rolland Dudemaine, Phil Blundell, Scott Barrett
+ Rolland Dudemaine, Phil Blundell, Scott Barrett, Andreas Schuldei
 
 
         Thanks! (and sorry if I forgot to mention someone)
